--- a/ConceptorsTests_CK.ipynb
+++ b/ConceptorsTests_CK.ipynb
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,13 +780,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "server created\n",
       "server running\n"
      ]
     }
@@ -796,6 +797,32 @@
     "    print(\"onMorph\")\n",
     "    \n",
     "makeOSCServer(onMorph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "onMorph\n",
+      "morph\n"
+     ]
+    }
+   ],
+   "source": [
+    "#test\n",
+    "try:\n",
+    "    target = Address(57400)\n",
+    "except AddressError as err:\n",
+    "    print (str(err))\n",
+    "    sys.exit()\n",
+    "\n",
+    "# send message \"/foo/message1\" with int, float and string arguments\n",
+    "send(target, \"/morph\", 0.3)"
    ]
   },
   {
