--- a/conceptor_tryout_mb.ipynb
+++ b/conceptor_tryout_mb.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%run conceptors.py"
@@ -69,14 +67,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "params = {'N':30, 'NetSR':1.6, 'NetinpScaling':1.6,'BiasScaling':0.3,'TychonovAlpha':0.0001,\n",
-    "         'washoutLength':100, 'learnLength':500, 'TychonovAlphaReadout':0.0001,\n",
-    "         'learnLengthWout':500, 'recallTestLength':100,\n",
-    "         'alphas':np.array([12.0,24.0,36.0]),\n",
+    "params = {'N':30, \n",
+    "          'NetSR':0.6, # was 1.6; scaling for internal weights: according to ESN tutorial, this one should actually be < 1\n",
+    "          'NetinpScaling':1.6, # scaling for input weights\n",
+    "          'BiasScaling':0.3, # scaling for bias\n",
+    "          'TychonovAlpha':0.0001,\n",
+    "          'TychonovAlphaReadout':0.0001,\n",
+    "          'washoutLength':100, 'learnLength':500, \n",
+    "          'learnLengthWout':500, \n",
+    "          'recallTestLength':100,\n",
+    "          'alphas':np.array([12.0,24.0,36.0]),\n",
     "          'patts':np.array([pJ1b, pJ2,pSine2])\n",
     "}\n",
     "\n",
-    "net = makeNetwork(params)\n"
+    "net1 = makeNetwork(params)\n"
    ]
   },
   {
@@ -85,7 +89,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "morphValues = [1,0,0]\n",
+    "net2 = makeNetwork(params)\n",
+    "net3 = makeNetwork(params)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "morphValues = [1,0,0,1,0,0,1,0,0]\n",
     "\n",
     "def onMorph(ind,f):\n",
     "    global morphValues\n",
@@ -105,28 +119,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import time\n",
     "\n",
-    "#run a network\n",
-    "x = 0.5 * np.random.randn(net['p']['N'],1)\n",
     "keepRunning = True\n",
     "\n",
+    "#run a network\n",
+    "x1 = 0.5 * np.random.randn(net1['p']['N'],1)\n",
+    "x2 = 0.5 * np.random.randn(net2['p']['N'],1)\n",
+    "x3 = 0.5 * np.random.randn(net3['p']['N'],1)\n",
+    "\n",
     "while keepRunning:\n",
-    "#     pos = morphValue\n",
-    "    C = (net['Cs'][0,0].dot(morphValues[0])) + (net['Cs'][0,1].dot((morphValues[1]))) + (net['Cs'][0,2].dot((morphValues[2])))\n",
-    "    Wsr = net['W'].dot(1.2)\n",
-    "    for i_oversample in range(1):\n",
-    "        x = np.tanh(Wsr.dot(x) + net['Wbias'])\n",
-    "        x = C.dot(x)\n",
-    "    #x_CTestPL[:,n-p['washoutLength'],i_pattern] = x[0:3].T\n",
-    "    output = net['Wout'].dot(x)\n",
-    "#     print( output )\n",
-    "#     print( x.flatten() )\n",
-    "    oscserver.send_value( \"/output\", output[0][0] )\n",
-    "    oscserver.send_array( \"/x\", x.flatten() )\n",
+    "#     print( morphValues )\n",
+    "    # net 1\n",
+    "    output1, x1 = conceptor_mix_step( net1, x1, morphValues[0:3] )\n",
+    "    oscserver.send_value( \"/output/1\", output1[0][0] )\n",
+    "    oscserver.send_array( \"/x/1\", x1.flatten() )\n",
+    "    \n",
+    "    # net 2\n",
+    "    output2, x2 = conceptor_mix_step( net2, x2, morphValues[3:6] )\n",
+    "    oscserver.send_value( \"/output/2\", output2[0][0] )\n",
+    "    oscserver.send_array( \"/x/2\", x2.flatten() )\n",
+    "\n",
+    "    # net 3\n",
+    "    output3, x3 = conceptor_mix_step( net3, x3, morphValues[6:9] )\n",
+    "    oscserver.send_value( \"/output/3\", output3[0][0] )\n",
+    "    oscserver.send_array( \"/x/3\", x3.flatten() )\n",
+    "    \n",
     "    time.sleep(0.01)\n",
     "    "
    ]
@@ -139,6 +162,51 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def conceptor_mix_step( net, x, morphvalues, oversample=1 ):\n",
+    "    ind = 0\n",
+    "    C = np.zeros( (net['p']['N'] , net['p']['N'] ) )\n",
+    "    for i_morph in morphvalues:\n",
+    "        C = C + (net['Cs'][0,ind].dot( i_morph ))\n",
+    "        ind = ind + 1\n",
+    "    Wsr = net['W'].dot(1.2)\n",
+    "    for i_oversample in range( oversample ):\n",
+    "        x = np.tanh(Wsr.dot(x) + net['Wbias'])\n",
+    "        x = C.dot(x)\n",
+    "    output = net1['Wout'].dot(x)\n",
+    "    return output, x\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print( net1['p']['N'] )\n",
+    "print( morphValues[0:3], morphValues[3:6], morphValues[6:9])\n",
+    "morphFactors = morphValues[0:3]\n",
+    "a, b = conceptor_mix_step( net1, x1, morphFactors )\n",
+    "print( a )\n",
+    "print( b )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "morphValues"
+   ]
   },
   {
    "cell_type": "code",
