update changes to gesture recognition

--- a/workshop/gestures_detection.ipynb
+++ b/workshop/gestures_detection.ipynb
@@ -37,6 +37,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# to normalize the two gestures to each other, we find the maximum value in the two arrays:\n",
+    "maxValue = max( max(gesture1), max(gesture2) )\n",
+    "\n",
+    "print( maxValue )\n",
+    "\n",
+    "# scale the gestures and make bipolar:\n",
+    "\n",
+    "gesture1 = (gesture1 / maxValue)*2 - 1;\n",
+    "gesture2 = (gesture2 / maxValue)*2 - 1;\n",
+    "\n",
+    "plot( gesture1 )\n",
+    "plot( gesture2 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import dill as pickle\n",
+    "with open(r\"net.pickle\", \"rb\") as input_file:\n",
+    "    net  = pickle.load(input_file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "net"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
