--- a/workshop/gestures_detection.ipynb
+++ b/workshop/gestures_detection.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# loads numpy and matplotlib\n",
@@ -18,9 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# get current working path\n",
@@ -54,6 +50,7 @@
     "gesture1 = (gesture1 / maxValue)*2 - 1;\n",
     "gesture2 = (gesture2 / maxValue)*2 - 1;\n",
     "\n",
+    "# plot it again: looks the same, but scale on the y-axis is now between -1 and 1\n",
     "plot( gesture1 )\n",
     "plot( gesture2 )"
    ]
@@ -64,10 +61,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## conceptor code\n",
+    "%run ../python/conceptors.py\n",
     "\n",
-    "import dill as pickle\n",
-    "with open(r\"net.pickle\", \"rb\") as input_file:\n",
-    "    net  = pickle.load(input_file)\n"
+    "## osc server code\n",
+    "%run ../python/oscserver.py"
    ]
   },
   {
@@ -75,9 +73,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "net"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -105,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
