update detectgesture in realtime

--- a/workshop/detectgesture_realtime.ipynb
+++ b/workshop/detectgesture_realtime.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -29,9 +29,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "server created\n"
+     ]
+    }
+   ],
    "source": [
     "## load the functions for receiving and sending osc\n",
     "%run ../python/oscserver.py\n",
