clean versions of the notebooks for the workshop, including the trained network

--- a/workshop/detectgesture_realtime.ipynb
+++ b/workshop/detectgesture_realtime.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -14,14 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# load the network that we have saved before\n",
-    "net = loadClassifierNetwork( \"net.pickle\" )\n",
+    "net = loadObject( \"net.pickle\" )\n",
     "\n",
     "# create an initial state for the net\n",
     "state = createState(net)"
@@ -29,17 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "server created\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "## load the functions for receiving and sending osc\n",
     "%run ../python/oscserver.py\n",
@@ -68,7 +62,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import time\n",
@@ -78,7 +74,6 @@
     "while keepRunning:\n",
     "    state = iterateClassifier(net, state, inputValue)\n",
     "#     print( state['x'] )\n",
-    "#     oscserver.send_value( \"/output/1\", output1[0][0] )\n",
     "    oscserver.send_array( \"/x/1\", state['x'].flatten() )\n",
     "    oscserver.send_array( \"/evidence\", state['evidence'] )  \n",
     "    time.sleep(0.033)\n"
