update to conceptor_tryout_mb notebook

--- a/conceptor_tryout_mb.ipynb
+++ b/conceptor_tryout_mb.ipynb
@@ -11,9 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    }
+   ],
    "source": [
     "%pylab inline"
    ]
@@ -67,7 +75,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "params = {'N':30, \n",
+    "params = {'N':32,\n",
+    "          'Nout':2,\n",
     "          'NetSR':0.6, # was 1.6; scaling for internal weights: according to ESN tutorial, this one should actually be < 1\n",
     "          'NetinpScaling':1.6, # scaling for input weights\n",
     "          'BiasScaling':0.3, # scaling for bias\n",
@@ -242,7 +251,250 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "p = {'N':5,\n",
+    "          'Nout':2,\n",
+    "          'NetSR':0.6, # was 1.6; scaling for internal weights: according to ESN tutorial, this one should actually be < 1\n",
+    "          'NetinpScaling':1.6, # scaling for input weights\n",
+    "          'BiasScaling':0.3, # scaling for bias\n",
+    "          'TychonovAlpha':0.0001,\n",
+    "          'TychonovAlphaReadout':0.0001,\n",
+    "          'washoutLength':100, 'learnLength':500, \n",
+    "          'learnLengthWout':500, \n",
+    "          'recallTestLength':100,\n",
+    "          'alphas':np.array([12.0,24.0,36.0]),\n",
+    "          'patts':np.array([pJ1b, pJ2,pSine2])\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NetConnectivity = 1 # just for small networks\n",
+    "if p['N'] > 20:\n",
+    "    NetConnectivity = 10.0/p['N'];\n",
+    "WstarRaw = generateInternalWeights(p['N'], NetConnectivity)\n",
+    "WinRaw = np.random.randn(p['N'], 1) # input is 1-dimensional\n",
+    "WbiasRaw = np.random.randn(p['N'], 1) # bias is also 1-dimensional\n",
+    "\n",
+    "#Scale raw weights\n",
+    "Wstar = p['NetSR'] * WstarRaw;\n",
+    "Win = p['NetinpScaling'] * WinRaw;\n",
+    "Wbias = p['BiasScaling'] * WbiasRaw;\n",
+    "I = np.eye(p['N']) # identity matrix\n",
+    "\n",
+    "xCollector = np.zeros((p['N'],p['Nout'], p['learnLengthWout'])) # variable to collect states of x\n",
+    "pCollector = np.zeros((p['Nout'], p['learnLengthWout'])) # variable to collect states of p (output?)\n",
+    "x = np.zeros((p['N'],p['Nout'])) # initial state\n",
+    "\n",
+    "\n",
+    "# first training: washout is to wash out the input state 'noise'; learnLength is then the actual amount of learning samples\n",
+    "for n in np.arange(p['washoutLength'] + p['learnLength']):\n",
+    "    u = np.random.randn() * 1.5  # random input\n",
+    "    print( Win , u )\n",
+    "    print( Win.dot(u) )\n",
+    "    print( Wstar.dot(x) )\n",
+    "    x = np.tanh( Wstar.dot(x) + Win.dot(u) + Wbias ) # calculate next internal activation\n",
+    "    if n >= p['washoutLength']:\n",
+    "        xCollector[:,:, n - p['washoutLength']] = x[:,:]\n",
+    "        pCollector[:, n - p['washoutLength']] = u\n",
+    "        \n",
+    "print( pCollector.shape )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "cwd = os.getcwd()\n",
+    "\n",
+    "\n",
+    "gesture1 = np.loadtxt(cwd + '/workshop/gesturedata_0.txt')\n",
+    "\n",
+    "print( gesture1 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/nescivi/git/projects/sussex/chrysalisConceptors\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'/home/nescivi/git/projects/sussex/chrysalisConceptors/supercollider/workshop/gesturedata_0.txt'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "cwd = os.getcwd()\n",
+    "\n",
+    "cwd + '/workshop/gesturedata_0.txt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "def makeNetwork(p):    \n",
+    "    NetConnectivity = 1 # just for small networks\n",
+    "    if p['N'] > 20:\n",
+    "        NetConnectivity = 10.0/p['N'];\n",
+    "    WstarRaw = generateInternalWeights(p['N'], NetConnectivity)\n",
+    "    WinRaw = np.random.randn(p['N'], p['Nout'])\n",
+    "    WbiasRaw = np.random.randn(p['N'], p['Nout'])\n",
+    "\n",
+    "    #Scale raw weights\n",
+    "    Wstar = p['NetSR'] * WstarRaw;\n",
+    "    Win = p['NetinpScaling'] * WinRaw;\n",
+    "    Wbias = p['BiasScaling'] * WbiasRaw;\n",
+    "    I = np.eye(p['N']) # identity matrix\n",
+    "    \n",
+    "    xCollector = np.zeros((p['N'], p['learnLengthWout'])) # variable to collect states of x\n",
+    "    pCollector = np.zeros((p['Nout'], p['learnLengthWout'])) # variable to collect states of p (output?)\n",
+    "    x = np.zeros((p['N'],p['Nout'])) # initial state\n",
+    "    \n",
+    "    # first training: washout is to wash out the input state 'noise'; learnLength is then the actual amount of learning samples\n",
+    "    for n in np.arange(p['washoutLength'] + p['learnLength']):\n",
+    "        u = np.random.randn(p['Nout']) * 1.5  # random input\n",
+    "        x = np.tanh( Wstar.dot(x) + Win.dot(u) + Wbias ) # calculate next internal activation\n",
+    "        if n >= p['washoutLength']:\n",
+    "            xCollector[:, n - p['washoutLength']] = x[:,0]\n",
+    "            pCollector[:, n - p['washoutLength']] = u\n",
+    "\n",
+    "#     print(\"Mean/Max/Min Activations, random network driven by noise\")\n",
+    "#     plot(np.mean(xCollector.T, axis=1))\n",
+    "#     plot(np.max(xCollector.T, axis=1))\n",
+    "#     plot(np.min(xCollector.T, axis=1))\n",
+    "\n",
+    "    # Wout \n",
+    "    Wout = np.linalg.inv( xCollector.dot(xCollector.conj().T) + ( p['TychonovAlphaReadout'] * np.eye(p['N']) ) ).dot(xCollector).dot(pCollector.conj().transpose()).conj().T\n",
+    "    print(\"Initial training\")\n",
+    "    print(\"NRMSE: \", nrmse(Wout.dot(xCollector), pCollector))\n",
+    "    print(\"absWeight: \", np.mean(abs(Wout)))\n",
+    "\n",
+    "    allTrainArgs = np.zeros((p['N'], p['patts'].size * p['learnLength']))\n",
+    "    allTrainOldArgs = np.zeros((p['N'], p['patts'].size * p['learnLength']))\n",
+    "    allTrainTargs = np.zeros((p['N'], p['patts'].size * p['learnLength']))\n",
+    "    allTrainOuts = np.zeros((p['Nout'], p['patts'].size * p['learnLength']))\n",
+    "    xCollectors =  np.zeros((p['Nout'], p['patts'].size), dtype=np.object)\n",
+    "    SRCollectors =  np.zeros((p['Nout'], p['patts'].size), dtype=np.object)\n",
+    "    URCollectors =  np.zeros((p['Nout'], p['patts'].size), dtype=np.object)\n",
+    "    patternRs =  np.zeros((p['Nout'], p['patts'].size), dtype=np.object)\n",
+    "    #train_xPL =  np.zeros((1, p['patts'].size), dtype=np.object)\n",
+    "    #train_pPL =  np.zeros((1, p['patts'].size), dtype=np.object)\n",
+    "    startXs =  np.zeros((p['N'], p['patts'].size), dtype=np.object)\n",
+    "\n",
+    "    for i_pattern in range(p['patts'].size):\n",
+    "        print('Loading pattern ', i_pattern)\n",
+    "        patt = p['patts'][i_pattern]\n",
+    "        xCollector = np.zeros((p['N'], p['learnLength']))\n",
+    "        xOldCollector = np.zeros((p['N'], p['learnLength']))\n",
+    "        pCollector = np.zeros((p['Nout'], p['learnLength']))\n",
+    "        x = np.zeros((p['N'],1))\n",
+    "        for n in range(p['washoutLength'] + p['learnLength']):\n",
+    "            u = patt(n+1)\n",
+    "            xOld = x\n",
+    "            x = np.tanh( Wstar.dot(x) + Win.dot(u) + Wbias )\n",
+    "            if n >= p['washoutLength']:\n",
+    "                xCollector[:, n - p['washoutLength']] = x[:,0]\n",
+    "                xOldCollector[:, n - p['washoutLength']] = xOld[:,0]\n",
+    "                pCollector[:, n - p['washoutLength']] = u\n",
+    "\n",
+    "        xCollectors[0,i_pattern] = xCollector\n",
+    "        R = xCollector.dot(xCollector.T) / p['learnLength']\n",
+    "        [Ux,sx,Vx] = np.linalg.svd(R)\n",
+    "        SRCollectors[0,i_pattern] = np.diag(sx)\n",
+    "        URCollectors[0,i_pattern] = Ux\n",
+    "        patternRs[0,i_pattern] = R\n",
+    "\n",
+    "        startXs[:,i_pattern] = x[:,0]\n",
+    "\n",
+    "        #needed?\n",
+    "        #train_xPL[0,i_pattern] = xCollector[:,:signalPlotLength]\n",
+    "        #train_pPL[0,i_pattern] = pCollector[0,:signalPlotLength]\n",
+    "        ###\n",
+    "\n",
+    "        allTrainArgs[:, i_pattern * p['learnLength']:(i_pattern+1) * p['learnLength']] = xCollector\n",
+    "        allTrainOldArgs[:, i_pattern * p['learnLength']:(i_pattern+1) * p['learnLength']] = xOldCollector\n",
+    "        allTrainOuts[:, i_pattern * p['learnLength']:(i_pattern+1) * p['learnLength']] = pCollector\n",
+    "        allTrainTargs[:, i_pattern * p['learnLength']:(i_pattern+1) * p['learnLength']] = Win.dot(pCollector)\n",
+    "\n",
+    "    Wtargets = np.arctanh(allTrainArgs) - np.tile( Wbias, (1, p['patts'].size * p['learnLength']))\n",
+    "\n",
+    "    W = np.linalg.inv(allTrainOldArgs.dot(allTrainOldArgs.conj().T) +\n",
+    "                      (p['TychonovAlpha'] * np.eye(p['N']))).dot(allTrainOldArgs).dot(Wtargets.conj().T).conj().T\n",
+    "    print(\"W NMRSE: \", np.mean(nrmse(W.dot(allTrainOldArgs), Wtargets)))\n",
+    "    print(\"absSize: \", np.mean(np.mean(abs(W), axis=0)))\n",
+    "\n",
+    "    # figure(1)\n",
+    "    # plot(np.mean(W.dot(allTrainOldArgs).T, axis=1))\n",
+    "\n",
+    "    print('Computing conceptors')\n",
+    "\n",
+    "    Cs = np.zeros((4, p['patts'].size), dtype=np.object)\n",
+    "    for i_pattern in range(p['patts'].size):\n",
+    "        R = patternRs[0,i_pattern]\n",
+    "        [U,s,V] = np.linalg.svd(R)\n",
+    "        S = np.diag(s)\n",
+    "        Snew = (S * np.linalg.inv(S + pow(p['alphas'][i_pattern], -2) * np.eye(p['N'])))\n",
+    "\n",
+    "        C =  U.dot(Snew).dot(U.T);\n",
+    "        Cs[0,i_pattern] = C\n",
+    "        Cs[1,i_pattern] = U\n",
+    "        Cs[2,i_pattern] = np.diag(Snew)\n",
+    "        Cs[3,i_pattern] = np.diag(S)\n",
+    "\n",
+    "    x_CTestPL = np.zeros((3, p['recallTestLength'], p['patts'].size))\n",
+    "    p_CTestPL = np.zeros((1, p['recallTestLength'], p['patts'].size))\n",
+    "    for i_pattern in range(p['patts'].size):\n",
+    "        C = Cs[0,i_pattern]\n",
+    "        x = 0.5 * np.random.randn(p['N'],1)\n",
+    "        for n in range(p['recallTestLength'] + p['washoutLength']):\n",
+    "            x = np.tanh(W.dot(x) + Wbias)\n",
+    "            x = C.dot(x)\n",
+    "            if (n > p['washoutLength']):\n",
+    "                x_CTestPL[:,n-p['washoutLength'],i_pattern] = x[0:3].T\n",
+    "                p_CTestPL[:,n-p['washoutLength'],i_pattern] = Wout.dot(x)\n",
+    "    # for i_pattern in range(p['patts'].size):\n",
+    "    #     figure(2 + i_pattern)\n",
+    "    #     plot(p_CTestPL[:,:,i_pattern].T)\n",
+    "    #     plot([p['patts'][i_pattern](x) for x in arange(p['recallTestLength'])])\n",
+    "\n",
+    "    return locals()"
+   ]
   }
  ],
  "metadata": {
