--- a/workshop/detectgesture_realtime.ipynb
+++ b/workshop/detectgesture_realtime.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -53,7 +53,7 @@
     "    oscserver.free()\n",
     "    return True\n",
     "\n",
-    "oscserver = makeOSCServer(57120, onExit)\n",
+    "oscserver = makeOSCServer(57120, 57400, onExit)\n",
     "oscserver.onInput = onInput\n",
     "\n",
     "oscserver.start()"
